pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-handcrafted
  labels: 
    app: web
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
    ports:
    - containerPort: 80
